[package]
name = "rhai-analyzer"
version = "0.1.0"
edition = "2024"
description = "Static analysis of Rhai ASTs: extracts accessed variable paths and string comparisons"
license = "MIT"
repository = "https://github.com/isSerge/rhai-analyzer"
authors = ["Serge Kovbasiuk <isserge@protonmail.com>"]
keywords = ["rhai", "static-analysis", "ast", "variable-paths", "string-comparisons"]
categories = ["development-tools", "parsing", "static-analysis"]

[dependencies]
rhai = { version = "1.22.2", features = ["internals"] }
